--- a/Recepices/Style.css
+++ b/Recepices/Style.css
@@ -36,6 +36,7 @@ main {
 .glass {
   background: white;
   max-height: 90vh;
+  min-height: 70vh;
   width: 70%;
   background: linear-gradient(
     to right bottom,
@@ -62,6 +63,11 @@ main {
   );
   border-radius: 2rem;
 }
+
+.user{
+  margin-top: 1rem;
+}
+
 .link {
   display: flex;
   margin: 2rem 0rem;
@@ -84,30 +90,30 @@ main {
 
 .games {
   margin: 5rem;
-  display: flex;
   flex-direction: column;
   justify-content: space-evenly;
 }
 
 .card {
-  flex: 1;
-  display: flex;
+  /*flex: 1;
+  display: flex;*/
   background: linear-gradient(
     to left top,
     rgba(255, 255, 255, 0.8),
     rgba(255, 255, 255, 0.5)
   );
+  max-width: 20%;
   border-radius: 1rem;
-  margin: 2rem 0rem;
-  padding: 2rem;
+  margin: 1rem 0rem;
+  padding: 1rem;
   box-shadow: 6px 6px 20px rgba(122, 122, 122, 0.212);
   justify-content: space-between;
 }
 
 .card-info {
-  flex: 2;
+  /*flex: 2;
   display: flex;
-  flex-direction: column;
+  flex-direction: column;*/
   justify-content: space-between;
   align-items: right;
 }
